# TestBed_TemplateProject

./: .gitignore  .gitmodules  CLion RUST mips.bat  CLion gcc-mipsel-unknown-linux-gnu.bat  CMakeLists.txt  DevelNotes.md  Makefile  Readme.md  gcc-shell-mipsel-unknown-linux-gnu.bat  main.cpp  run.bat  rust-shell-mipsel-unknown-linux-gnu.bat  setvars-mipsel-unknown-linux-gnu.bat
config/: header-cpp.txt
doc/: notes.md
lib/: CMakeLists.txt
lib/CBreadBoard/: CMakeLists.txt  conanbuildinfo.cmake  conanbuildinfo.txt  conanfile.txt  conaninfo.txt
lib/CBreadBoard/include/CBreadBoard/: Arduino.h  cbreadboard.h  console.h  interrupt.h  io.h  library.h  mcu.h  memory.h  network.h  serial.h
lib/CBreadBoard/include/CBreadBoard/internal/: display.h
lib/CBreadBoard/include/CBreadBoard/io/: input.h
lib/CBreadBoard/src/: Arduino.cpp  interrupt.cpp  io.cpp  library.cpp  mcu.cpp  memory.cpp  serial.cpp
lib/CBreadBoard/src/display/: display.cpp
lib/CBreadBoard/src/io/: input.cpp
lib/CBreadBoard/src/platform/linux/: network.cpp
lib/CBreadBoard/src/platform/win/: console.cpp  network.cpp  printlocales.cpp
lib/STD17lib/: CMakeLists.txt
lib/STD17lib/include/STD17lib/: fsm.h  library.h  network.h
lib/STD17lib/src/: fsm.cpp  library.cpp
lib/STD17lib/src/platform/win/: network.cpp
src/: CMakeLists.txt  MyClass.cpp  MyClass.h  main.cpp  usercode.cpp
test/: CMakeLists.txt  GoogleTest.cpp  GoogleTest1.cpp  main_test.cpp
